...
  fileprivate var copyrightContentStackView : UIStackView?
  
  
  override func viewDidLoad() {
    super.viewDidLoad()

    title = "About"

    contentStackView.isLayoutMarginsRelativeArrangement = true
    contentStackView.layoutMargins = UIEdgeInsets(top: 20, left: 0, bottom: 20, right: 0)
  }
  
  
...
          self.copyrightContentStackView = nil
      })
    }
  }
  
  fileprivate func createCopyrightInfo() -> UIStackView {
    let logo = UIImage(named: "rw_logo")
    let logoImageView = UIImageView(image: logo)
    
    let copyrightLabel = UILabel(frame: CGRect.zero)
    copyrightLabel.text = "© Razeware 2015"
    
    let axisButton = UIButton(type: .roundedRect)
...
