...
    self.configureView()
  }
  
  @IBAction func handleShowDetailsButtonPressed(_ sender: UIButton) {
    if detailsLabel.isHidden {
      animateView(detailsLabel, toHidden: false)
      showDetailsButton.setTitle("Hide Details", for: UIControlState())
    } else {
      animateView(detailsLabel, toHidden: true)
      showDetailsButton.setTitle("Show Details", for: UIControlState())
    }
  }
  
  @IBAction func handleShowMapButtonPressed(_ sender: UIButton) {
    if mapView.isHidden {
      animateView(mapView, toHidden: false)
      showMapButton.setTitle("Hide Map", for: UIControlState())
    } else {
      animateView(mapView, toHidden: true)
      showMapButton.setTitle("Show Map", for: UIControlState())
    }
  }

...
